Fix footer nav spacing
- Remove extra container padding inside footer
- Move horizontal padding from nav-item to nav-link (overrides Bootstrap default)
- Add consistent padding to footer-copyright
- Remove redundant color rule (inherits from .footer a)

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -477,10 +477,6 @@
       text-decoration: underline;
     }
   }
-
-  .container {
-    padding: $footer-spacing 0;
-  }
 }
 
 .footer-copyright {
@@ -488,6 +484,7 @@
   @extend .flex-wrap;
   @extend .justify-content-center;
 
+  padding: $footer-spacing;
   font-size: $footer-note-size;
 }
 
@@ -495,13 +492,9 @@
   @extend .justify-content-center;
   padding: $footer-spacing;
 
-  .nav-item {
-    padding: 0 .5rem;
-  }
-
   .nav-link {
-    color: var(--bs-white);
     @extend .fw-normal;
+    padding: 0 .5rem;
 
     &:hover {
       text-decoration: underline;
